# Crawler-Vivek-project2

./: .gitmodules  CMakeLists.txt  buildlog.txt  compile_commands.json  main.cpp  test.cpp
buildlogs/: buildlog10july_session1.md  buildlog10july_session2.md  buildlog10july_session3.md  buildlog14july_session2.md  buildlog14july_session3.md  buildlog7july_session1.md  buildlog7july_session2.md  buildlog7july_session3.md  buildlog8july_session1.md  buildlog8july_session2.md  buildlog8july_session3.md  buildlog9july_session1.md  buildlog9july_session2.md  buildlog9july_session3.md
dailyjournals/: dailyjornal_14july  dailyjournal_10july  dailyjournal_7july  dailyjournal_8july  dailyjournal_9july
design_proposal/: design_proposalV1.md  design_proposalV2.md
include/: HTMLparser.h  KMP.h  URLfrontier.h  URLnormalizer.h  URLvalidator.h  crawler.h  fetcher.h  frameworkdetector.h  pagestorage.h  renderengine.h  seenstorage.h
src/: HTMLparser.cpp  KMP.cpp  URLfrontier.cpp  URLnormalizer.cpp  URLvalidator.cpp  crawler.cpp  fetcher.cpp  frameworkdetector.cpp  pagestorage.cpp  renderengine.cpp  seenstorage.cpp
testing/: HTMLparser_testing.cpp  KMP_testing.cpp  URLfrontier_testing.cpp  URLnormalizer_testing.cpp  URLvalidator_testing.cpp  fetcher_testing.cpp  renderengine_testing.cpp  seenstorage_testing.cpp
